--- a/video_classifier/requirements.txt
+++ b/video_classifier/requirements.txt
@@ -11,7 +11,7 @@ pandas==2.2.2
 Pillow==10.3.0
 retina_face==0.0.14
 seaborn==0.13.2
-torch==2.1.2
-torchvision==0.16.2
+torch
+torchvision
 tqdm==4.66.1
 urllib3==2.2.1
