--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.application.name=emotion_recognition
-spring.datasource.url=jdbc:postgresql://localhost:5432/emotion_recognition
-spring.datasource.username=politecnico
-spring.datasource.password=dibari
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+azure.storage.connection-string=${AZURE_STORAGE_CONN_STRING}
