--- a/video_classifier/.gitignore
+++ b/video_classifier/.gitignore
@@ -2,3 +2,45 @@ huggingface/*
 images/*
 
 **__pycache__**
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+replay_pid*
+
+huggingface/*
+images/*
+
+**__pycache__**
+
+original_repo/*
+*.venv
+
+/emotion_recognizer/models/*
+**DS_Store**
+**.vscode**
+**.mp4**
+**.onnx
+**.pth
+**.pt
+**.rknn
