--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,6 @@ services:
     volumes:
       - C:\Users\XY373VZ\OneDrive - EY\Desktop\ingdelsoftware\postgres_data:/var/lib/postgresql/data
     restart: always
-
   backend:
     container_name: backend_container
     env_file: ./.env
@@ -30,4 +29,13 @@ services:
       - AZURE_STORAGE_CONN_STRING=$AZURE_STORAGE_CONN_STRING
     depends_on:
       - db
+    restart: always
+
+  video-classifier:
+    container_name: video_classifier_container
+    build:
+      context: ./video_classifier
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
     restart: always
