--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,9 +3,14 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 azure.storage.connection-string=${AZURE_STORAGE_CONN_STRING}
+azure.storage.container-name=${AZURE_STORAGE_CONTAINER_NAME}
+azure.storage.sas-token=${AZURE_STORAGE_SAS_TOKEN}
+
+security.issuer=gabriele
+security.secret=secret
