--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
       - DB_USERNAME=${POSTGRESDB_USER}
       - DB_PASSWORD=${POSTGRESDB_ROOT_PASSWORD}
       - AZURE_STORAGE_CONN_STRING=${AZURE_STORAGE_CONN_STRING}
+      - AZURE_STORAGE_SAS_TOKEN=${AZURE_STORAGE_SAS_TOKEN}
+      - AZURE_STORAGE_CONTAINER_NAME=${AZURE_STORAGE_CONTAINER_NAME}
     depends_on:
       - db
     restart: always
