--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,50 @@
-FROM openjdk:18-oracle
-COPY target/*.jar app.jar
+# Stage 1: Build stage
+FROM openjdk:18-oracle AS build
+
+# Set the working directory
+WORKDIR /app
+
+# Install Maven
+RUN microdnf install -y maven
+
+# Copy Maven configuration files
+COPY pom.xml .
+COPY .mvn .mvn
+COPY mvnw .
+COPY mvnw.cmd .
+
+# Make mvnw executable
+RUN chmod +x mvnw
+
+# Download dependencies (for better caching)
+RUN ./mvnw dependency:go-offline -B
+
+# Copy source code
+COPY src ./src
+
+# Build the application
+RUN ./mvnw clean package -DskipTests
+
+# Stage 2: Production stage
+FROM openjdk:18-oracle AS prod
+
+# Set the working directory
+WORKDIR /app
+
+# Create a non-root user
+RUN groupadd -r appuser && useradd -r -g appuser appuser
+
+# Copy the JAR file from build stage
+COPY --from=build /app/target/*.jar app.jar
+
+# Change ownership of the app directory
+RUN chown -R appuser:appuser /app
+
+# Switch to non-root user
+USER appuser
+
+# Expose the port
 EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "/app.jar"]
+
+# Run the application
+ENTRYPOINT ["java", "-jar", "app.jar"]
