added jwt validation to python backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,5 +12,5 @@ azure.storage.connection-string=${AZURE_STORAGE_CONN_STRING}
 azure.storage.container-name=${AZURE_STORAGE_CONTAINER_NAME}
 azure.storage.sas-token=${AZURE_STORAGE_SAS_TOKEN}
 
-security.issuer=gabriele
-security.secret=secret
+security.issuer=${SECURITY_ISSUER}
+security.secret=${SECURITY_SECRET}
