--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,12 +1,22 @@
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
-spring.jpa.hibernate.ddl-auto=create-drop
+# Change Hibernate DDL auto to none to prevent automatic schema generation
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.SQLServerDialect
+
+# Enable SQL script initialization
+spring.sql.init.mode=always
+spring.sql.init.platform=sqlserver
+spring.sql.init.schema-locations=classpath:db-migration/schema.sql
+
+# Connection pool configuration for improved performance
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=10
 
 azure.storage.connection-string=${AZURE_STORAGE_CONN_STRING}
 azure.storage.container-name=${AZURE_STORAGE_CONTAINER_NAME}
@@ -14,3 +24,4 @@ azure.storage.sas-token=${AZURE_STORAGE_SAS_TOKEN}
 
 security.issuer=${SECURITY_ISSUER}
 security.secret=${SECURITY_SECRET}
+
