--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,9 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - DB_URL=jdbc:postgresql://db:5432/emotion_recognition
-      - DB_USERNAME=${POSTGRESDB_USER}
-      - DB_PASSWORD=${POSTGRESDB_ROOT_PASSWORD}
+      - DB_URL=jdbc:sqlserver://emotion-recognition-db-server.database.windows.net:1433;database=emotion_recognition;user=politecnico@emotion-recognition-db-server;password=gabriele1!;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+      - DB_USERNAME=politecnico@emotion-recognition-db-server
+      - DB_PASSWORD=gabriele1!
       - AZURE_STORAGE_CONN_STRING=${AZURE_STORAGE_CONN_STRING}
       - AZURE_STORAGE_SAS_TOKEN=${AZURE_STORAGE_SAS_TOKEN}
       - AZURE_STORAGE_CONTAINER_NAME=${AZURE_STORAGE_CONTAINER_NAME}
@@ -38,6 +38,7 @@ services:
     profiles:
       - core  # Core services profile
       - full  # Full stack profile
+      - backend  # Backend profile
 
   video-classifier:
     container_name: video_classifier_container
