ADDED google oauth

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,3 +25,7 @@ azure.storage.sas-token=${AZURE_STORAGE_SAS_TOKEN}
 security.issuer=${SECURITY_ISSUER}
 security.secret=${SECURITY_SECRET}
 
+# Google OAuth Configuration
+google.oauth.client-id=117151816412-k3bheigoqrcrm4h9aul8203unrr1ldit.apps.googleusercontent.com
+google.oauth.client-secret=${GOOGLE_CLIENT_SECRET}
+
